# saita-node

./: .gitignore  Cargo.toml  README.md
saitachain/: Cargo.toml  build.rs
saitachain/.rpm/: saitachain.spec
saitachain/cli/: Cargo.toml  build.rs
saitachain/cli/src/: cli.rs  command.rs  error.rs  host_perf_check.rs  lib.rs
saitachain/core-primitives/: Cargo.toml
saitachain/core-primitives/src/: lib.rs
saitachain/doc/: shell-completion.md  testing.md
saitachain/erasure-coding/: Cargo.toml
saitachain/erasure-coding/benches/: scaling_with_validators.rs
saitachain/erasure-coding/fuzzer/: Cargo.toml
saitachain/erasure-coding/fuzzer/src/: reconstruct.rs  round_trip.rs
saitachain/erasure-coding/src/: lib.rs
saitachain/evm-client/api/: Cargo.toml
saitachain/evm-client/api/src/: backend.rs  lib.rs
saitachain/evm-client/cli/: Cargo.toml
saitachain/evm-client/cli/src/: lib.rs
saitachain/evm-client/consensus/: Cargo.toml
saitachain/evm-client/consensus/src/: lib.rs
saitachain/evm-client/db/: Cargo.toml
saitachain/evm-client/db/src/: lib.rs
saitachain/evm-client/mapping-sync/: Cargo.toml
saitachain/evm-client/mapping-sync/src/: lib.rs
saitachain/evm-client/rpc/: Cargo.toml
saitachain/evm-client/rpc-core/: Cargo.toml
saitachain/evm-client/rpc-core/src/: eth.rs  eth_pubsub.rs  lib.rs  net.rs  txpool.rs  web3.rs
saitachain/evm-client/rpc/src/: eth_pubsub.rs  lib.rs  net.rs  signer.rs  txpool.rs  web3.rs
saitachain/evm-client/storage/: Cargo.toml
saitachain/evm-client/storage/src/: lib.rs
saitachain/evm-frame/base-fee/: Cargo.toml
saitachain/evm-frame/base-fee/src/: lib.rs  tests.rs
saitachain/evm-frame/dynamic-fee/: Cargo.toml
saitachain/evm-frame/dynamic-fee/src/: lib.rs  tests.rs
saitachain/evm-frame/ethereum/: Cargo.toml
saitachain/evm-frame/ethereum/src/: lib.rs  mock.rs
saitachain/evm-frame/evm/: Cargo.toml
saitachain/evm-frame/evm-chain-id/: Cargo.toml
saitachain/evm-frame/evm-chain-id/src/: lib.rs
saitachain/evm-frame/evm/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
saitachain/evm-frame/evm/test-vector-support/: Cargo.toml
saitachain/evm-frame/hotfix-sufficients/: Cargo.toml
saitachain/evm-frame/hotfix-sufficients/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
saitachain/evm-primitives/account/: Cargo.toml
saitachain/evm-primitives/account/src/: lib.rs
saitachain/evm-primitives/consensus/: Cargo.toml
saitachain/evm-primitives/consensus/src/: lib.rs
saitachain/evm-primitives/dynamic-fee/: Cargo.toml
saitachain/evm-primitives/dynamic-fee/src/: lib.rs
saitachain/evm-primitives/ethereum/: Cargo.toml
saitachain/evm-primitives/ethereum/src/: lib.rs
saitachain/evm-primitives/evm/: Cargo.toml
saitachain/evm-primitives/evm/src/: lib.rs  precompile.rs  validation.rs
saitachain/evm-primitives/rpc/: Cargo.toml
saitachain/evm-primitives/rpc/src/: lib.rs
saitachain/evm-primitives/self-contained/: Cargo.toml
saitachain/evm-primitives/self-contained/src/: checked_extrinsic.rs  lib.rs  unchecked_extrinsic.rs
saitachain/evm-primitives/storage/: Cargo.toml
saitachain/evm-primitives/storage/src/: lib.rs
saitachain/node/collation-generation/: Cargo.toml
saitachain/node/collation-generation/src/: error.rs  lib.rs  metrics.rs  tests.rs
saitachain/node/core/approval-voting/: Cargo.toml
saitachain/node/core/av-store/: Cargo.toml
saitachain/node/core/backing/: Cargo.toml
saitachain/node/core/bitfield-signing/: Cargo.toml
saitachain/node/core/candidate-validation/: Cargo.toml
saitachain/node/core/chain-api/: Cargo.toml
saitachain/node/core/chain-selection/: Cargo.toml
saitachain/node/core/dispute-coordinator/: Cargo.toml
saitachain/node/core/parachains-inherent/: Cargo.toml
saitachain/node/core/prospective-parachains/: Cargo.toml
saitachain/node/core/provisioner/: Cargo.toml
saitachain/node/core/pvf/: Cargo.toml
saitachain/node/core/pvf-checker/: Cargo.toml
saitachain/node/core/runtime-api/: Cargo.toml
saitachain/node/gum/: Cargo.toml  README.md
saitachain/node/gum/src/: lib.rs  tests.rs
saitachain/node/jaeger/: Cargo.toml
saitachain/node/jaeger/src/: config.rs  errors.rs  lib.rs  spans.rs
saitachain/node/malus/: Cargo.toml  README.md
saitachain/node/malus/container/: Containerfile-cargo-chef  malus-local-build.Containerfile  polkadot-local-build.Containerfile
saitachain/node/metrics/: Cargo.toml  README.md
saitachain/node/overseer/: Cargo.toml
saitachain/node/primitives/: Cargo.toml
saitachain/node/service/: Cargo.toml
saitachain/node/subsystem/: Cargo.toml
saitachain/node/subsystem-test-helpers/: Cargo.toml
saitachain/node/subsystem-types/: Cargo.toml
saitachain/node/subsystem-util/: Cargo.toml
saitachain/parachain/: Cargo.toml
saitachain/parachain/src/: lib.rs  primitives.rs  wasm_api.rs
saitachain/parachain/test-parachains/: Cargo.toml
saitachain/primitives/: Cargo.toml
saitachain/primitives/src/: lib.rs  runtime_api.rs
saitachain/primitives/test-helpers/: Cargo.toml
saitachain/rpc/: Cargo.toml
saitachain/rpc/src/: lib.rs
saitachain/runtime/common/: Cargo.toml
saitachain/runtime/metrics/: Cargo.toml
saitachain/runtime/parachains/: Cargo.toml
saitachain/runtime/saitachain/: Cargo.toml  build.rs
saitachain/runtime/test-runtime/: Cargo.toml  build.rs
saitachain/src/: main.rs
saitachain/statement-table/: Cargo.toml
saitachain/statement-table/src/: generic.rs  lib.rs
saitachain/tests/: benchmark_block.rs  benchmark_extrinsic.rs  benchmark_overhead.rs  benchmark_storage_works.rs  common.rs  invalid_order_arguments.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs  workers.rs
saitachain/utils/generate-bags/: Cargo.toml
saitachain/utils/staking-miner/: Cargo.toml
saitachain/xcm/: Cargo.toml
saitachain/xcm/pallet-xcm/: Cargo.toml
saitachain/xcm/pallet-xcm-benchmarks/: Cargo.toml
saitachain/xcm/src/: double_encoded.rs  lib.rs  tests.rs
saitachain/xcm/xcm-builder/: Cargo.toml
saitachain/xcm/xcm-executor/: Cargo.toml
saitachain/xcm/xcm-simulator/: Cargo.toml
(+668 files in other folders)
