[[bin]]
name = "Saita-Chain"
path = "src/main.rs"

[[bin]]
name = "SaitaChain-execute-worker"
path = "src/bin/execute-worker.rs"

[[bin]]
name = "SaitaChain-prepare-worker"
path = "src/bin/prepare-worker.rs"

[package]
name = "saitachain"
description = "Implementation of a saitachain node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
rust-version = "1.64.0"
readme = "README.md"
authors.workspace = true
edition.workspace = true
version = "1.1.0"

[dependencies]
color-eyre = { version = "0.6.1", default-features = false }
tikv-jemallocator = { version = "0.5.0", optional = true }

# Crates in our workspace, defined as dependencies so we can pass them feature flags.
saitama-cli = { path = "cli", features = [
	"saitachain-native",
] }
saitama-node-core-pvf = { path = "node/core/pvf" }
saitama-node-core-pvf-prepare-worker = { path = "node/core/pvf/prepare-worker" }
saitama-overseer = { path = "node/overseer" }

# Needed for worker binaries.
saitama-node-core-pvf-common = { path = "node/core/pvf/common" }
saitama-node-core-pvf-execute-worker = { path = "node/core/pvf/execute-worker" }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.5.0"

[dev-dependencies]
assert_cmd = "2.0.4"
nix = { version = "0.26.1", features = ["signal"] }
tempfile = "3.2.0"
tokio = "1.24.2"
substrate-rpc-client = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev" }
saitama-core-primitives = { path = "core-primitives" }

[build-dependencies]
substrate-build-script-utils = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev" }

[badges]
maintenance = { status = "actively-developed" }

[features]
runtime-benchmarks = [ "saitama-cli/runtime-benchmarks" ]
try-runtime = [ "saitama-cli/try-runtime" ]
fast-runtime = [ "saitama-cli/fast-runtime" ]
runtime-metrics = [ "saitama-cli/runtime-metrics" ]
pyroscope = [ "saitama-cli/pyroscope" ]
jemalloc-allocator = [
	"dep:tikv-jemallocator",
	"saitama-node-core-pvf-prepare-worker/jemalloc-allocator",
	"saitama-node-core-pvf/jemalloc-allocator",
	"saitama-overseer/jemalloc-allocator",
]

# Enables timeout-based tests supposed to be run only in CI environment as they may be flaky
# when run locally depending on system load
ci-only-tests = [ "saitama-node-core-pvf/ci-only-tests" ]
network-protocol-staging = [ "saitama-cli/network-protocol-staging" ]

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "saitachain"
extended-description = "Implementation of a saitachain node in Rust based on the Substrate framework."
section = "misc"
maintainer = "security@.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	[
		"target/release/saitachain",
		"/usr/bin/",
		"755",
	],
	[
		"target/release/SaitaChain-prepare-worker",
		"/usr/lib/saitachain/",
		"755"
	],
	[
		"target/release/SaitaChain-execute-worker",
		"/usr/lib/saitachain/",
		"755"
	],
	[
		"scripts/packaging/saitachain.service",
		"/lib/systemd/system/",
		"644",
	],
]
conf-files = ["/etc/default/saitachain"]

[package.metadata.spellcheck]
config = "./scripts/ci/gitlab/spellcheck.toml"
