[package]
name = "saitama-core-primitives"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sp-core = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-std = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-runtime = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
fp-account = { path = "../evm-primitives/account",default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.6.1", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"fp-account/std",
	"sp-std/std",
]
