[package]
name = "saitama-erasure-coding"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
saitama-primitives = { path = "../primitives" }
saitama-node-primitives = { package = "saitama-node-primitives", path = "../node/primitives" }
novelpoly = { package = "reed-solomon-novelpoly", version = "1.0.0" }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["std", "derive"] }
sp-core = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev" }
sp-trie = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev" }
thiserror = "1.0.48"

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "scaling_with_validators"
harness = false
