[package]
name = "saitachain-statement-table"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
sp-core = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git" , branch = "dev" }
primitives = { package = "saitama-primitives", path = "../primitives" }
