[package]
name = "fc-rpc-core"
version = "1.1.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "RPC traits of Ethereum."
edition = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = {version = "0.14.0", features = ["with-codec", "with-serde"] }
ethereum-types = {version = "0.14.1" }
jsonrpsee = { version = "0.16.3", features = ["server", "macros"] }
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0"

[features]
txpool = []
