[package]
name = "fc-rpc"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
edition = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { version = "0.14.0", features = ["with-codec"] }
ethereum-types = {version = "0.14.1",default-features = false  }
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }

#evm = { version = "0.40.0", default-features = false, features = ["with-codec"] }

futures = "0.3.28"

hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
jsonrpsee = {version = "0.16.3", features = ["server", "macros"] }
libsecp256k1 = { version = "0.7.1", default-features = false }
log = { version = "0.4.20", default-features = false }
prometheus = { version = "0.13.1", default-features = false }
rand = "0.8"
rlp = { version = "0.5.2", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }

schnellru = "0.2.1"
# serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
# thiserror = "1.0"
tokio = { version = "1.32.0", features = ["sync"] , default-features = false}

# Substrate
prometheus-endpoint = { package = "substrate-prometheus-endpoint",git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sc-client-api = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
# sc-consensus-aura = {path = "../../../substrate/client/consensus/aura", default-features = false }
sc-network = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sc-network-common = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sc-network-sync = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev" , default-features = false}
sc-rpc = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev" , default-features = false}
sc-service = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sc-transaction-pool = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev" , default-features = false}
sc-transaction-pool-api = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev" , default-features = false}
sc-utils = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev" , default-features = false}


sp-api = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false, features = ["default"] }
sp-block-builder = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false , features = ["default"]}
sp-blockchain = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev" , default-features = false}
sp-consensus = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev" , default-features = false}
# sp-consensus-aura = {path = "../../../substrate/primitives/consensus/aura", default-features = false , features = ["default"]}
sp-core = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev" , default-features = false, features = ["default"]}
# sp-inherents = {path = "../../../substrate/primitives/inherents", default-features = false, features = ["default"] }
sp-io = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false , features = ["default"]}
sp-runtime = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false , features = ["default"]}
sp-state-machine = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false , features = ["default"]}
sp-storage = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false, features = ["default"] }
# sp-timestamp = { path = "../../../substrate/primitives/timestamp", default-features = false , features = ["default"]}
# Frontier
fc-api = { path = "../api", default-features = false}
fc-mapping-sync = { path = "../mapping-sync", default-features = false }	
fc-rpc-core = { version = "1.1.0-dev", path = "../../evm-client/rpc-core", default-features = false }
fc-storage = { version = "1.0.0-dev" ,path ="../storage", default-features = false}
fp-evm = { version = "3.0.0-dev", path = "../../evm-primitives/evm", default-features = false, features = ["default"] }
fp-rpc = { version = "3.0.0-dev", path = "../../evm-primitives/rpc",features= ["default"] }
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage",features= ["default"] }
pallet-evm = { version="6.0.0-dev", path = "../../evm-frame/evm", default-features = false, features = ["default"] }	

[dev-dependencies]
tempfile = "3.8.0"
# Substrate
sc-block-builder = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sc-client-db = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", features = ["rocksdb"], default-features = false }
sp-consensus = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false}
substrate-test-runtime-client = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
# Frontier
fc-db = { path = "../db", default-features = false }

[features]
default = ["rocksdb"]
rocksdb = [
	"sc-service/rocksdb",
	"fc-db/rocksdb",
	"fc-mapping-sync/rocksdb",
]
txpool = ["fc-rpc-core/txpool"]
rpc-binary-search-estimate = []
