[package]
name = "pallet-dynamic-fee"
version = "4.0.0-dev"
license = "Apache-2.0"
description = "Dynamic fee handling for EVM."
edition = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }

log = { version = "0.4.17", default-features = false }

scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

# Substrate

frame-support = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }

frame-system = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-core = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-inherents = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-runtime = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }

sp-std = {git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
# Frontier
fp-dynamic-fee = { version = "1.0.0", path = "../../evm-primitives/dynamic-fee", default-features = false }
fp-evm = { version = "3.0.0-dev", path = "../../evm-primitives/evm", default-features = false }

[dev-dependencies]
# Substrate
pallet-timestamp = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-io = {  git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }
sp-runtime = { git = "ssh://git@github.com/saitamahub/Saita-substrate.git", branch = "dev", default-features = false }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
	# Substrate
	"frame-system/std",
	"frame-support/std",
	# Frontier
	"fp-dynamic-fee/std",
	"fp-evm/std",
	"log/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
